src/main/resources/static/assets/css/main.css
/* ... */
				#menu ul a.opener:before, #menu ul span.opener:before {
					-moz-transition: color 0.2s ease-in-out, -moz-transform 0.2s ease-in-out;
					-webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
					-ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
					transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
					color: #9fa3a6;
					content: '\f078';
					position: absolute;
					right: 0;
				}

				#menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
					color: #f56a6a;
				}

				#menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
					display: block;
				}

				#menu ul a.opener.active:before, #menu ul span.opener.active:before {
					-moz-transform: rotate(-180deg);
					-webkit-transform: rotate(-180deg);
					-ms-transform: rotate(-180deg);
					transform: rotate(-180deg);
				}

	#menu > ul > li {
		border-top: solid 1px rgba(210, 215, 217, 0.75);
		margin: 0.5em 0 0 0;
		padding: 0.5em 0 0 0;
	}

		#menu > ul > li > ul {
			color: #9fa3a6;
			display: none;
			margin: 0.5em 0 1.5em 0;
			padding-left: 1em;
		}

			#menu > ul > li > ul a, #menu > ul > li > ul span {
				font-size: 0.8em;
			}

			#menu > ul > li > ul > li {
				margin: 0.125em 0 0 0;
				padding: 0.125em 0 0 0;
			}

		#menu > ul > li:first-child {
			border-top: 0;
			margin-top: 0;
			padding-top: 0;
		}

